@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext: "wse_events"
 #
-# Auto generated 03-10-2007 00:08
+# Auto generated 03-10-2007 21:12
 #
 # Manual updates:
 # Only the data in the array - anything else is removed by next write.
@@ -29,7 +29,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 1,
 	'lockType' => '',
 	'author_company' => '',
-	'version' => '0.1.5',
+	'version' => '0.1.6',
 	'constraints' => array(
 		'depends' => array(
 			'cms' => '',
@@ -40,7 +40,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => 'a:49:{s:9:"ChangeLog";s:4:"da49";s:10:"README.txt";s:4:"d74e";s:33:"class.tx_wseevents_categories.php";s:4:"a044";s:31:"class.tx_wseevents_dbplugin.php";s:4:"6fe8";s:29:"class.tx_wseevents_events.php";s:4:"1982";s:28:"class.tx_wseevents_rooms.php";s:4:"bfe5";s:31:"class.tx_wseevents_speakers.php";s:4:"2e0f";s:36:"class.tx_wseevents_tcemainprocdm.php";s:4:"f242";s:32:"class.tx_wseevents_timeslots.php";s:4:"62af";s:12:"ext_icon.gif";s:4:"138e";s:17:"ext_localconf.php";s:4:"24b1";s:15:"ext_php_api.dat";s:4:"9924";s:14:"ext_tables.php";s:4:"dc23";s:14:"ext_tables.sql";s:4:"3381";s:19:"flexform_ds_pi1.xml";s:4:"1335";s:32:"icon_tx_wseevents_categories.gif";s:4:"138e";s:28:"icon_tx_wseevents_events.gif";s:4:"138e";s:31:"icon_tx_wseevents_locations.gif";s:4:"138e";s:27:"icon_tx_wseevents_rooms.gif";s:4:"138e";s:30:"icon_tx_wseevents_sessions.gif";s:4:"138e";s:30:"icon_tx_wseevents_speakers.gif";s:4:"138e";s:31:"icon_tx_wseevents_timeslots.gif";s:4:"138e";s:16:"locallang_db.php";s:4:"ad12";s:7:"tca.php";s:4:"f5f7";s:8:"todo.txt";s:4:"caa0";s:35:"tx_wseevents_speaker_attendance.gif";s:4:"138e";s:14:"wseevents.tmpl";s:4:"4ed5";s:14:"doc/manual.sxw";s:4:"2360";s:19:"doc/wizard_form.dat";s:4:"9500";s:20:"doc/wizard_form.html";s:4:"25ab";s:39:"mod1/class.tx_wseevents_backendlist.php";s:4:"38c2";s:42:"mod1/class.tx_wseevents_categorieslist.php";s:4:"d7b4";s:38:"mod1/class.tx_wseevents_eventslist.php";s:4:"cc34";s:41:"mod1/class.tx_wseevents_locationslist.php";s:4:"310b";s:37:"mod1/class.tx_wseevents_roomslist.php";s:4:"c90f";s:40:"mod1/class.tx_wseevents_sessionslist.php";s:4:"7dd8";s:50:"mod1/class.tx_wseevents_speakerattendanceslist.php";s:4:"9139";s:40:"mod1/class.tx_wseevents_speakerslist.php";s:4:"1d2f";s:41:"mod1/class.tx_wseevents_timeslotslist.php";s:4:"a418";s:14:"mod1/clear.gif";s:4:"cc11";s:13:"mod1/conf.php";s:4:"a216";s:14:"mod1/index.php";s:4:"0e8e";s:18:"mod1/locallang.xml";s:4:"5986";s:22:"mod1/locallang_mod.xml";s:4:"f60a";s:19:"mod1/moduleicon.gif";s:4:"dcb4";s:30:"pi1/class.tx_wseevents_pi1.php";s:4:"aecd";s:17:"pi1/locallang.php";s:4:"ec99";s:24:"pi1/static/editorcfg.txt";s:4:"87c1";s:20:"pi1/static/setup.txt";s:4:"06fa";}',
+	'_md5_values_when_last_written' => 'a:49:{s:9:"ChangeLog";s:4:"4bca";s:10:"README.txt";s:4:"d74e";s:33:"class.tx_wseevents_categories.php";s:4:"a044";s:31:"class.tx_wseevents_dbplugin.php";s:4:"0252";s:29:"class.tx_wseevents_events.php";s:4:"fd7e";s:28:"class.tx_wseevents_rooms.php";s:4:"bfe5";s:31:"class.tx_wseevents_speakers.php";s:4:"2e0f";s:36:"class.tx_wseevents_tcemainprocdm.php";s:4:"c584";s:32:"class.tx_wseevents_timeslots.php";s:4:"34b0";s:12:"ext_icon.gif";s:4:"138e";s:17:"ext_localconf.php";s:4:"24b1";s:15:"ext_php_api.dat";s:4:"9924";s:14:"ext_tables.php";s:4:"dc23";s:14:"ext_tables.sql";s:4:"3381";s:19:"flexform_ds_pi1.xml";s:4:"1335";s:32:"icon_tx_wseevents_categories.gif";s:4:"138e";s:28:"icon_tx_wseevents_events.gif";s:4:"138e";s:31:"icon_tx_wseevents_locations.gif";s:4:"138e";s:27:"icon_tx_wseevents_rooms.gif";s:4:"138e";s:30:"icon_tx_wseevents_sessions.gif";s:4:"138e";s:30:"icon_tx_wseevents_speakers.gif";s:4:"138e";s:31:"icon_tx_wseevents_timeslots.gif";s:4:"138e";s:16:"locallang_db.php";s:4:"ad12";s:7:"tca.php";s:4:"ca58";s:8:"todo.txt";s:4:"bcd4";s:35:"tx_wseevents_speaker_attendance.gif";s:4:"138e";s:14:"wseevents.tmpl";s:4:"9402";s:14:"doc/manual.sxw";s:4:"9b21";s:19:"doc/wizard_form.dat";s:4:"9500";s:20:"doc/wizard_form.html";s:4:"25ab";s:39:"mod1/class.tx_wseevents_backendlist.php";s:4:"38c2";s:42:"mod1/class.tx_wseevents_categorieslist.php";s:4:"20a4";s:38:"mod1/class.tx_wseevents_eventslist.php";s:4:"6983";s:41:"mod1/class.tx_wseevents_locationslist.php";s:4:"9746";s:37:"mod1/class.tx_wseevents_roomslist.php";s:4:"e67c";s:40:"mod1/class.tx_wseevents_sessionslist.php";s:4:"afeb";s:50:"mod1/class.tx_wseevents_speakerattendanceslist.php";s:4:"c48c";s:40:"mod1/class.tx_wseevents_speakerslist.php";s:4:"88d0";s:41:"mod1/class.tx_wseevents_timeslotslist.php";s:4:"9502";s:14:"mod1/clear.gif";s:4:"cc11";s:13:"mod1/conf.php";s:4:"a216";s:14:"mod1/index.php";s:4:"73fa";s:18:"mod1/locallang.xml";s:4:"5986";s:22:"mod1/locallang_mod.xml";s:4:"f60a";s:19:"mod1/moduleicon.gif";s:4:"dcb4";s:30:"pi1/class.tx_wseevents_pi1.php";s:4:"25fa";s:17:"pi1/locallang.php";s:4:"ec99";s:24:"pi1/static/editorcfg.txt";s:4:"87c1";s:20:"pi1/static/setup.txt";s:4:"06fa";}',
 	'suggests' => array(
 	),
 );
